--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,4 @@
-recursive-include 01_refData *
+recursive-include data *
 
 include LICENSE.txt
-include 00_scripts/Example_CommandsFromScratch.txt
+include scripts/Example_CommandsFromScratch.txt
