--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -11,3 +11,8 @@ sphinx:
 # Optionally set the version of Python and requirements required to build your docs
 python:
    version: 3.7
+   
+sphinx:
+  builder: html
+  configuration: docs/source/conf.py
+  fail_on_warning: false
