--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -14,5 +14,5 @@ python:
    
 sphinx:
   builder: html
-  configuration: docs/source/conf.py
+  configuration: docs/conf.py
   fail_on_warning: false
